--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,5 @@
+flask[async]
 python-telegram-bot==20.0
 gspread
 oauth2client
-apscheduler
-Flask[async]
-python-telegram-bot[webhooks]
-gunicorn
-
-
+gunicorn  # Required for production servers
